# ketos

./: .gitignore  .travis.yml  Cargo.toml  LICENSE-MIT  README.md  index.html  search-index.js
.github/workflows/: ci.yml
benches/: core.rs
bitflags/: index.html  macro.bitflags.html
byteorder/: enum.BigEndian.html  enum.LittleEndian.html  index.html  trait.ByteOrder.html  type.NativeEndian.html  type.NetworkEndian.html
cfg_if/: index.html  macro.cfg_if.html
codegen-tests/: Cargo.toml
codegen-tests/src/: build.rs
codegen-tests/tests/: value_encode.rs  value_encode.rs.in
docs/: README.md  functions.md  modules.md  operators.md  string_formatting.md
examples/: calling.rs  interop.rs  module.rs  struct.rs
getopts/: FailType.t.html  enum.Fail.html  enum.FailType.html  enum.HasArg.html  enum.Occur.html  enum.ParsingStyle.html  index.html  sidebar-items.js  struct.Matches.html  struct.Options.html  type.Result.html
implementors/byteorder/: trait.ByteOrder.js
implementors/num/: trait.Num.js  trait.One.js  trait.Signed.js  trait.Zero.js
implementors/num_integer/: trait.Integer.js
implementors/num_traits/: trait.Num.js
implementors/void/: trait.ResultVoidExt.js
ketos/: index.html  ketos_fn.m.html  macro.ketos_args!.html  macro.ketos_args.html  macro.ketos_fn.html  sidebar-items.js
ketos/args/: index.html
ketos/buffer/: CodeBuffer.t.html  More.t.html  MoreResult.t.html  enum.More.html  enum.MoreResult.html  index.html  sidebar-items.js  struct.CodeBuffer.html
ketos/bytecode/: BYTECODE_VERSION.v.html  CodeBlock.t.html  CodeReader.t.html  Instruction.t.html  JumpInstruction.t.html  MAX_LONG_OPERAND.v.html  MAX_SHORT_OPERAND.v.html  constant.BYTECODE_VERSION.html  constant.MAX_LONG_OPERAND.html  constant.MAX_SHORT_OPERAND.html  enum.Instruction.html  enum.JumpInstruction.html  index.html  sidebar-items.js  struct.Code.html  struct.CodeBlock.html  struct.CodeReader.html
ketos/bytes/: index.html  sidebar-items.js  struct.Bytes.html
ketos/compile/: CompileError.t.html  enum.CompileError.html  fn.compile.html  index.html  sidebar-items.js
ketos/completion/: complete_name.v.html  fn.complete_name.html  index.html  sidebar-items.js
ketos/encode/: MAGIC_NUMBER.v.html  constant.MAGIC_NUMBER.html  enum.DecodeError.html  enum.EncodeError.html  fn.read_bytecode.html  fn.read_bytecode_file.html  fn.write_bytecode.html  fn.write_bytecode_file.html  index.html  read_bytecode.v.html  read_bytecode_file.v.html  sidebar-items.js  write_bytecode.v.html  write_bytecode_file.v.html
ketos/error/: enum.Error.html  index.html  sidebar-items.js
ketos/exec/: ExecError.t.html  call_function.v.html  enum.ExecError.html  execute.v.html  execute_function.v.html  execute_lambda.v.html  fn.call_function.html  fn.execute.html  fn.execute_function.html  fn.execute_lambda.html  fn.panic.html  fn.panic_none.html  index.html  panic_none.v.html  sidebar-items.js  struct.Context.html
ketos/function/: Arity.t.html  FunctionImpl.t.html  Lambda.t.html  SYSTEM_FNS.v.html  SystemFn.t.html  add_number.v.html  div_number.v.html  enum.Arity.html  first.v.html  floor_number.v.html  (+26 more)
ketos_derive/: Cargo.toml  LICENSE-MIT  README.md
ketos_derive/src/: lib.rs
ketos_derive/tests/: test_derive.rs  test_struct.rs
lib/: list.ket  list.kts  test-list.ket  test.ket  test.kts
linefeed/: index.html
nix/: enum.Errno.html  enum.Error.html  enum.c_void.html  index.html  macro.convert_ioctl_res.html  macro.io.html  macro.ioc.html  macro.ioctl.html  macro.ior.html  macro.iorw.html  macro.iow.html  trait.NixPath.html  type.Result.html  type.c_int.html
num/: fn.abs.html  fn.abs_sub.html  fn.checked_pow.html  fn.clamp.html  fn.one.html  fn.range.html  fn.range_inclusive.html  fn.range_step.html  fn.range_step_inclusive.html  fn.signum.html  fn.zero.html  index.html  struct.BigInt.html  struct.BigUint.html  struct.Complex.html  trait.Bounded.html  trait.CheckedAdd.html  trait.CheckedDiv.html  trait.CheckedMul.html  trait.CheckedSub.html  trait.Float.html  trait.FromPrimitive.html  trait.Integer.html  trait.Num.html  trait.NumCast.html  trait.One.html  trait.PrimInt.html  trait.Saturating.html  trait.Signed.html  trait.ToPrimitive.html  trait.Unsigned.html  trait.Zero.html
num_bigint/: enum.ParseBigIntError.html  enum.Sign.html  index.html  struct.BigInt.html  struct.BigUint.html  trait.RandBigInt.html  trait.ToBigInt.html  trait.ToBigUint.html
num_complex/: index.html  struct.Complex.html
num_integer/: fn.multinomial.html  index.html  struct.IterBinomial.html  trait.Integer.html
num_iter/: fn.range.html  fn.range_inclusive.html  fn.range_step.html  fn.range_step_inclusive.html  index.html  struct.Range.html  struct.RangeInclusive.html  struct.RangeStep.html  struct.RangeStepInclusive.html
num_rational/: index.html  struct.ParseRatioError.html  struct.Ratio.html
num_traits/: enum.FloatErrorKind.html  fn.clamp.html  index.html  struct.ParseFloatError.html  trait.Num.html
src/: build.rs
tests/: compile.rs  conv.rs  core.rs  encode.rs  foreign.rs  restrict.rs  run.rs  structs.rs  test_derive.rs  test_derive_struct.rs  value_encode.rs  value_encode.rs.in
void/: enum.Void.html
(+1972 files in other folders)
