[package]
name = "ketos"
version = "0.12.0"
authors = ["Murarth <murarth@gmail.com>"]
edition = "2018"

description = "Lisp dialect scripting and extension language"

documentation = "https://docs.rs/ketos/"
homepage = "https://github.com/murarth/ketos"
repository = "https://github.com/murarth/ketos"

keywords = [ "scripting", "extension", "functional", "language", "lisp" ]
license = "MIT/Apache-2.0"
readme = "README.md"

[[bin]]
name = "ketos"
path = "src/bin/repl.rs"
doc = false
required-features = ["repl"]

[lib]
name = "ketos"
path = "src/ketos/lib.rs"

[dependencies]
byteorder = "1.3"
ketos_derive = { version = "0.12", path = "ketos_derive", optional = true }
num = "0.2"
rand = "0.7"
serde = { version = "1.0", optional = true }
# Used only in `tests/value_derive.rs`
serde_derive = { version = "1.0", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dirs = { version = "2.0", optional = true }
gumdrop = "0.7"
linefeed = { version = "0.6", optional = true }

[dev-dependencies]
assert_matches = "1.0"
ketos_derive = { version = "0.12", path = "ketos_derive" }

[features]
default = ["repl"]
derive = ["ketos_derive"]
repl = ["dirs", "linefeed"]

[workspace]
