[package]
name = "ketos_derive"
version = "0.10.0"
authors = ["Murarth <murarth@gmail.com>"]

description = "Derive traits for Ketos scripting language"

documentation = "https://docs.rs/ketos_derive/"
homepage = "https://github.com/murarth/ketos"
repository = "https://github.com/murarth/ketos"

keywords = ["ketos", "derive"]
license = "MIT/Apache-2.0"
readme = "README.md"

[lib]
name = "ketos_derive"
proc-macro = true

[dependencies]
proc-macro2 = "0.3"
quote = "0.5"
syn = "0.13"

[dev-dependencies]
assert_matches = "1.1"
ketos = { version = "0.10", path = "..", features = ["derive"] }
