[package]
name = "ketos_derive"
version = "0.11.0"
authors = ["Murarth <murarth@gmail.com>"]
edition = "2018"

description = "Derive traits for Ketos scripting language"

documentation = "https://docs.rs/ketos_derive/"
homepage = "https://github.com/murarth/ketos"
repository = "https://github.com/murarth/ketos"

keywords = ["ketos", "derive"]
license = "MIT/Apache-2.0"
readme = "README.md"

[lib]
name = "ketos_derive"
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"

[dev-dependencies]
assert_matches = "1.1"
